Fix: ChangeHeader z-index 수정

--- a/src/components/common/Header/ChangeHeader/ChangeHeader.module.scss
+++ b/src/components/common/Header/ChangeHeader/ChangeHeader.module.scss
@@ -11,6 +11,7 @@
   align-items: center;
   padding: 15px 0px;
   background-color: $WH;
+  z-index: 50;
 
   .leftChevron {
     position: absolute;
